# DigMatrix

./: .gitignore  README.md
digmatrix-server/: digmatrix-server.cabal  shell.nix
digmatrix-server/src/: Blocks.hs  Lib.hs
