name:                digmatrix-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CrazedProgrammer/DigMatrix
license:             MIT
-- license-file:        ../LICENSE-MIT
author:              CrazedProgrammer
maintainer:          crazedprogrammer@gmail.com
copyright:           2018 CrazedProgrammer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Blocks
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , bytestring
                     , linear
  default-language:    Haskell2010

executable digmatrix-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , digmatrix-server
  default-language:    Haskell2010

--test-suite myproject-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , myproject
--                     , hspec
--                     , hspec-wai
--                     , hspec-wai-json
--                     , aeson
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/CrazedProgrammer/DigMatrix
